# document-processing-demo

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.api.dev  Dockerfile.worker  Dockerfile.worker.dev  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/src/api/: main.py
backend/src/api/clients/: s3_client.py
backend/src/api/routers/: processing.py  upload.py
backend/src/api/services/: db_service.py  processing_service.py  s3_service.py
backend/src/clients/: s3_client.py
backend/src/config/: settings.py
backend/src/prompts/: system_prompts.py
backend/src/services/: db_service.py  processing_service.py
backend/src/services/gen_ai/: summary_service.py
backend/src/services/loaders/: pdf_loader.py
backend/src/worker/: celery_app.py  tasks.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: DocumentSummary.jsx  DocumentSummaryModal.jsx  Navbar.jsx  Processing.jsx  UploadModal.jsx
frontend/src/services/: uploadService.js
frontend/src/styles/: progress.css
